# python_web_ex_2

./: .gitignore  Dockerfile  UML.html  main.py  pyproject.toml
app/interfaces/: InterfaceABC.py
app/interfaces/console/: CommandABC.py  Commands.py  CommandsList.py  __init__.py  main.py
