[tool.poetry]
name = "console-bot-app"
version = "0.0.1"
description = ""
authors = ["Andrii Sukhenko <andreysuha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
